[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cambrian"
version = "1.0.0"
description = "A Fully Open, Vision-Centric Exploration of Multimodal LLMs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch", "torchvision",
    "transformers", "tokenizers", "sentencepiece", "shortuuid",
    "accelerate", "peft",
    "pydantic", "markdown2[all]", "numpy", "scikit-learn",
    "requests", "httpx", "uvicorn", "fastapi",
    "einops", "einops-exts", "timm",
    "open_clip_torch", "diffusers[torch]", "torchtext",
    "ezcolorlog", "gcsfs",
]

[project.optional-dependencies]
gpu = ["bitsandbytes", "deepspeed", "ninja", "wandb", "fastapi", "gradio", "gradio_client"]
tpu = ["ninja", "wandb"]

[project.urls]
"Homepage" = "https://cambrian-mllm.github.io/"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
